# JBL-Accessibility-Audit

./: .env.example  .gitignore  JBL_WCAG_Tech_Stack.docx  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.base.json
apps/api/: .tmp_classification_migration.db  .tmp_defects_migration_fresh.db  .tmp_findings_migration_fresh.db  .tmp_inventory_scope_migration.db  .tmp_orchestration_migration_fresh.db  .tmp_process_migration.db  alembic.ini  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_baseline.py  0002_audit_run_slice.py  0003_schema_registry_fingerprint.py  0004_auth_profiles.py  0005_inventory_scope_assets.py  0006_asset_classifications.py  0007_process_flows.py  0008_run_plans_and_scan_batches.py  0009_raw_findings_and_evidence.py  0010_defects_and_manual_review_tasks.py  0011_orchestration_status_lifecycle.py  0012_third_party_evidence_catalog.py
apps/api/src/jbl_audit_api/: __init__.py  main.py
apps/api/src/jbl_audit_api/api/: router.py
apps/api/src/jbl_audit_api/contracts/: __init__.py  asset_taxonomy.py
apps/api/tests/: conftest.py  test_assets.py  test_auth_profiles.py  test_classifications.py  test_defects.py  test_e2e_execution_loop.py  test_findings.py  test_health.py  test_orchestration.py  test_orchestration_execution.py  test_processes.py  test_real_browser_smoke.py  test_reporting.py  test_runs.py  test_schemas.py
docs/: README.md  (+1 more)
workers/docproc/: README.md  pyproject.toml
workers/docproc/src/jbl_docproc/: __init__.py
workers/docproc/tests/: test_schema_inference.py
(+82 files in other folders)
