[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jbl-docproc-worker"
version = "0.1.0"
description = "Document processing worker scaffold for the JBL WCAG audit monorepo"
requires-python = ">=3.11,<3.12"
dependencies = [
  "openpyxl>=3.1,<4.0",
  "rapidfuzz>=3.9,<4.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
